# HPCC-Platform

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  404.html  BUILD_MASTER_GUIDE.md  BUILD_ME.html  BUILD_ME.md  BairRx_Common.WKT.ecl  CMakeLists.txt  CMakePresets.json  CNAME  CONTRIBUTING.md  CONTRIBUTORS  FUTURE  LICENSE.txt  MyDockerfile  PR_DESCRIPTION.md  R-LICENSE.txt  README  README.html  README.md  README_BuildAssets.md  README_Buildvcpkg.md  README_testhelm.md  SECURITY.md  VERSIONS  agentstress.ecl  baseaddr.txt  build-config.h.cmake  build.sh  cmake-vs2015.bat  cmake_uninstall.cmake.in  devel.cmake  elastic4hpcclogs-0.1.0.tgz  hashmap.json  index.html  index.md  package-lock.json  (+18 more)
clienttools/install/: CMakeLists.txt  post_install.sh  postinst.in  postrm.in  prerm.in
common/: CMakeLists.txt  sourcedoc.xml
common/commonext/: CMakeLists.txt  commonext.cpp  commonext.hpp  sourcedoc.xml  thorport.cpp  thorport.hpp
common/dataxfer/: sourcedoc.xml
common/deftype/: CMakeLists.txt  deffield.cpp  deffield.hpp  deffield.ipp  deftype.cpp  deftype.hpp  deftype.ipp  defvalue.cpp  defvalue.hpp  defvalue.ipp  sourcedoc.xml
common/dllserver/: CMakeLists.txt  dllserver.cpp  dllserver.hpp  dllservererr.hpp  sourcedoc.xml  thorplugin.cpp  thorplugin.hpp
common/environment/: CMakeLists.txt  dalienv.cpp  dalienv.hpp  environment.cpp  environment.hpp  sourcedoc.xml
common/eventconsumption/: CMakeLists.txt  README.html  README.md  eventconsumption.h  eventdump.cpp  eventdump.h  eventdump.hpp  eventdumpptree.cpp  eventdumpstream.cpp  eventfilter.cpp  eventfilter.h  eventgrouping.cpp  eventgrouping.hpp  eventindex.cpp  eventindex.hpp  eventindexhotspot.cpp  eventindexhotspot.h  eventindexhotspot.hpp  eventindexhotspotbuckets.cpp  eventindexmodel.cpp  eventindexmodel.hpp  eventindexmodelexpansion.cpp  eventindexmodelstorage.cpp  eventindexplot.cpp  eventindexplot.h  eventindexsummarize.cpp  eventindexsummarize.h  eventiterator.cpp  eventiterator.h  eventmetaparser.cpp  eventmetaparser.hpp  eventmodeling.cpp  eventmodeling.h  eventoperation.cpp  eventoperation.h  eventsaveas.cpp  eventsaveas.h  eventunittests.cpp  eventunittests.hpp  eventutility.hpp  (+2 more)
common/fileview2/: CMakeLists.txt  fileview.hpp  fvdatasource.hpp  fvdisksource.cpp  fvdisksource.ipp  fvdsremote.cpp  fvdsremote.ipp  fverror.hpp  fvidxsource.cpp  fvidxsource.ipp  fvquerysource.cpp  fvquerysource.ipp  fvrelate.cpp  fvrelate.hpp  fvrelate.ipp  fvresultset.cpp  fvresultset.ipp  fvserver.cpp  fvsource.cpp  fvsource.ipp  fvtransform.cpp  fvtransform.ipp  fvwugen.cpp  fvwugen.hpp  fvwugen.ipp  fvwusource.cpp  fvwusource.ipp  sourcedoc.xml
common/monitoring/: CMakeLists.txt  preflight  sourcedoc.xml  usage
common/pkgfiles/: CMakeLists.txt  PACKAGEMAP_FORMAT.md  README.md  generate_packagemap.py  package.cpp  package.h  pkgimpl.hpp  referencedfilelist.cpp  referencedfilelist.hpp  sourcedoc.xml
common/remote/: CMakeLists.txt  archive.cpp  archive.hpp  dafscommon.hpp  dafsstream.cpp  dafsstream.hpp  gitfile.cpp  gitfile.hpp  remoteerr.hpp  rmtfile.cpp  rmtfile.hpp  rmtpass.cpp  rmtpass.hpp  rmtsmtp.cpp  rmtsmtp.hpp  rmtspawn.cpp  rmtspawn.hpp  rmtssh.cpp  rmtssh.hpp  sockfile.cpp  sockfile.hpp  sourcedoc.xml  uri.cpp  uri.hpp
common/roxiecommlib/: CMakeLists.txt  roxiecommlib.hpp  roxiecommunicationclient.cpp  sourcedoc.xml
common/roxiehelper/: CMakeLists.txt  roxiedebug.cpp  roxiedebug.hpp  roxiedebug.ipp  roxiehelper.cpp  roxiehelper.hpp  roxiehelper.ipp  roxielmj.hpp  roxierow.cpp  roxierow.hpp  sourcedoc.xml
common/roxiemanager/: CMakeLists.txt  referencedfilelist.cpp  referencedfilelist.hpp  roxiemanager.hpp  roxiequerycompiler.cpp  roxiequerycompiler.hpp  roxiequerymanager.cpp  roxiewuprocessor.cpp  roxiewuprocessor.hpp  sourcedoc.xml
common/thorhelper/: CMakeLists.txt  GENERIC_WRITE_INTERFACES.md  IndexMetadata.pm  commonext.cpp  commonext.hpp  csvsplitter.cpp  csvsplitter.hpp  enginecontext.hpp  engineerr.hpp  hpccconfig.cpp  hpccconfig.hpp  layouttrans.cpp  layouttrans.hpp  layouttrans.ipp  persistent.cpp  persistent.hpp  readmeta  roxiedebug.cpp  roxiedebug.hpp  roxiedebug.ipp  roxiehelper.cpp  roxiehelper.hpp  roxiehelper.ipp  roxielmj.hpp  roxierow.cpp  roxierow.hpp  roxiestream.hpp  sourcedoc.xml  thorcerror.hpp  thorcommon.cpp  thorcommon.hpp  thorcommon.ipp  thorfile.cpp  thorfile.hpp  thorhelper.hpp  thorherror.h  thormeta.cpp  thormeta.hpp  thormeta.txt  thorparse.cpp  (+37 more)
common/workunit/: CMakeLists.txt  package.cpp  package.h  package.hpp  pkgimpl.hpp  referencedfilelist.cpp  referencedfilelist.hpp  sourcedoc.xml  workflow.cpp  workflow.hpp  workunit.cpp  workunit.hpp  workunit.ipp  wuattr.cpp  wuattr.hpp  wuerror.hpp  wujobq.cpp  wujobq.hpp
common/wuanalysis/: CMakeLists.txt  anacommon.cpp  anacommon.hpp  anaerrorcodes.hpp  anarule.cpp  (+3 more)
dali/: CMakeLists.txt  sourcedoc.xml
docs/: .gitignore  BuildFromSource.xml  CMakeLists.txt  CT_Comm_Line_DFU.xml  CT_Comm_Line_ECL.xml  CT_Comm_Line_Roxie.xml  CT_ECL_CLI.xml  CT_ECL_IDE.xml  CT_Overview.xml  ClientTools.xml  CommonItems.xml  DOCUMENTATION.html  DOCUMENTATION.md  DOCUMENTATION.rst  DataHandling.xml  DataTutorial.xml  ECLCC.xml  ECLR.xml  ECLReference.xml  IMDB.xml  Installing_and_RunningTheHPCCPlatform.xml  LN-html.css  One-Click_RuningHPCCinAmazonWebServicesEC2.xml  RDDERef.xml  README.rst  RuningHPCCinAmazonWebServicesEC2.xml  RunningHPCCinaVirtualMachine.xml  ServiceLibraryReference.xml  UsingConfigManager.xml  Version.xml  hpcc_ldap.xml  manifest.md  package-lock.json  package.json
ecl/: CMakeLists.txt  sourcedoc.xml
initfiles/: .gitattributes  CMakeLists.txt  DOCUMENTATION.html  DOCUMENTATION.md  DOCUMENTATION.rst  README.rst  bash-vars.in  processor.cpp  sourcedoc.xml
lib2/: CMakeLists.txt
plugins/: CMakeLists.txt  sourcedoc.xml
spark/: CMakeLists.txt  spark-defaults.conf.in
testing/: CMakeLists.txt  sourcedoc.xml
thorlcr/: CMakeLists.txt  sourcedoc.xml
tools/: CMakeLists.txt  aks-cluster-insights.py  analyze_wuids.py  hpcc-aks-utility.py  hpcc_aks_util.pl  hpcc_aks_util.sh  sourcedoc.xml
(+24575 files in other folders)
